--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    <title>Ashik Sanyo</title>    <!-- Change it your name  --> .
+    <title>Kapish Rastogi</title>    <!-- Change it your name  --> .
   </head>
   <body class="light" id="top">
     <header class="header center">
       <h3>
         <a href="" class="link"  
-          >{AS}. <!--insert your initials here --></a
+          >{KR}. <!--insert your initials here --></a
         >
       </h3> <!--use the linkedIn or any link in above href-->
 
@@ -69,13 +69,13 @@
     <main>
       <!-- About -->
       <div class="about center">
-        <h1>Hi, I am <span class="about__name">Ashik Sanyo.</span></h1>
+        <h1>Hi, I am <span class="about__name">Kapish Rastogi.</span></h1>
         <h2 class="about__role">Aspiring DataScientist</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
-          I'm a Tech geek living in Bangalore, India. I love to solve problems and build things. Also an Ex-TCSer and presently a Post grad Data Science student at Christ University!
+          I am an ambitious Data Science enthusiast based in Bangalore, currently pursuing my Master's in Data Science at Christ University. With a passion for extracting meaningful insights from data, I am eager to explore the world of analytics and predictive modeling. Combining my analytical skills with programming expertise, I aspire to contribute to cutting-edge solutions that address real-world problems.
         </p> <!-- about you -->
         <br>
-        <a href="mailto:ashiksanyo01@gmail.com">Mail: ashisanyo01@gmail.com </a><p> Contact: +91 63624 86106</p>  <!--Change it to your mail id and contact no-->
+        <a href="mailto:kapishrastogiofficial@gmail.com">Mail: kapishrastogiofficial@gmail.com </a><p> Contact: +91 79057 80974</p>  <!--Change it to your mail id and contact no-->
       </br>
       
 
@@ -85,7 +85,7 @@
           </a>
 
           <a
-            href="https://github.com/ashiksanyo10" target="_blank"
+            href="https://github.com/KapishRastogi" target="_blank"
             aria-label="github"
             class="link link--icon"
           >
@@ -93,7 +93,7 @@
           </a> <!-- Github profile Link-->
 
           <a
-            href="https://linkedin.com/in/ashiksanyo" target="_blank"  
+            href="https://www.linkedin.com/in/kapish-rastogi-a001b91b2/" target="_blank"  
             aria-label="linkedin"
             class="link link--icon"
           > 
@@ -108,18 +108,18 @@
 
         <div class="projects__grid">
           <div class="project">
-            <h3>Ukraine Russia War Data Analysis</h3> <!--Peoject Title -->
+            <h3>Brain Tumor Classification</h3> <!--Peoject Title -->
             <p class="project__description">
-              2022 Ukraine Russia War Exploratory Data Analysis, Analysis was done on the day 167 of the war
+              Brain Tumor Classification on MRI Scan Images Using CNN Architectures
             </p> <!--Project description-->
             <ul class="project__stack">
-              <li class="project__stack-item">Python</li>
-              <li class="project__stack-item">Excel</li>
-              <li class="project__stack-item">Plotly</li>
+              <li class="project__stack-item">CNN</li>
+              <li class="project__stack-item">VGG-16</li>
+              <li class="project__stack-item">ResNet-50</li>
             </ul>
 
             <a
-              href="https://github.com/ashiksanyo10/Russia-Ukraine_War_EDA" target="_blank"
+              href="https://github.com/KapishRastogi/Brain-Tumor-Classification" target="_blank"
               aria-label="source code"
               class="link link--icon"
             >  <!--Project link-->
@@ -136,17 +136,18 @@
           </div>
 
           <div class="project">
-            <h3>Drone Detection - YOLO v8</h3>
+            <h3>Short Story Generator</h3>
             <p class="project__description">
-              An image Classification model using YOLO, which is trained on custom dataset
+              An AI system that accepts prompts from users in both text and speech formats, and generating stories on the basis of prompt.
             </p>
             <ul class="project__stack">
               <li class="project__stack-item">Python</li>
-              <li class="project__stack-item">YOLO v8</li>
+              <li class="project__stack-item">OpenAI API</li>
+              <li class="project__stack-item">ChatGPT</li>
             </ul>
 
             <a
-              href="https://github.com/ashiksanyo10/DroneXYOLOv8" target="_blank"
+              href="https://github.com/KapishRastogi/Short_Story_Generator" target="_blank"
               aria-label="https://github.com/ashiksanyo10/DroneXYOLOv8" target="_blank"
               class="link link--icon"
             >
@@ -229,7 +230,7 @@
       <section class="section skills" id="skills">
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
-          <li class="skills__list-item btn btn--plain">HTML</li>                        <!--You can fill in the elective course and you can remove extras-->
+          <li class="skills__list-item btn btn--plain">Python</li>                        <!--You can fill in the elective course and you can remove extras-->
           <li class="skills__list-item btn btn--plain">CSS</li>
           <li class="skills__list-item btn btn--plain">JavaScript</li>
           <li class="skills__list-item btn btn--plain">React</li>
@@ -247,7 +248,7 @@
         href="" 
         class="link footer__link"
       >  
-        Created By Ashik Sanyo! <!-- edit it to your name -->
+        Created By Kapish Rastogi! <!-- edit it to your name -->
       </a>
     </footer>
 
