--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       
 
         <div class="about__contact center">
-          <a href="https://drive.google.com/file/d/1fiYlv7Ou0tKWSdUlQwpc5Ye3hDEya3kK/view" target="_blank"  > <!-- drive link for resume-->
+          <a href="https://drive.google.com/file/d/1eSMdsSX6jKmZ-HnhjQVIxEIwqKHiBZrA/view?usp=sharing" target="_blank"  > <!-- drive link for resume-->
             <span class="btn btn--outline">Resume</span> 
           </a>
 
@@ -113,9 +113,9 @@
               Brain Tumor Classification on MRI Scan Images Using CNN Architectures
             </p> <!--Project description-->
             <ul class="project__stack">
-              <li class="project__stack-item">CNN</li>
-              <li class="project__stack-item">VGG-16</li>
-              <li class="project__stack-item">ResNet-50</li>
+              <li class="project__stack-item">Python</li>
+              <li class="project__stack-item">CV2</li>
+              <li class="project__stack-item">Keras</li>
             </ul>
 
             <a
@@ -197,11 +197,11 @@
       <div class="project">
         <h3>Open Weaver</h3>
         <p class="project__description">
-          Developed several model using the prototype kit called KANDI.
+          Developed a model that accepts prompts from users in both text and speech formats, and generating stories on the basis of prompt using KandiKit.
         </p>
         <ul class="project__stack">
           <li class="project__stack-item">Python</li>
-          <li class="project__stack-item">Gen -Ai</li>
+          <li class="project__stack-item">Gen-Ai</li>
           <li class="project__stack-item">Machine Learning</li>
         </ul>
 
