--- a/index.html
+++ b/index.html
@@ -166,6 +166,32 @@
           <i aria-hidden="true" class="fas fa-external-link-alt"></i>
         </a>
       </div>
+        <div class="project">
+        <h3>Exposys Data Labs</h3>
+        <p class="project__description">
+          Developed multiple regression models for forecasting profit outcomes.
+        </p>
+        <ul class="project__stack">
+          <li class="project__stack-item">Python</li>
+          <li class="project__stack-item">Gen-Ai</li>
+          <li class="project__stack-item">Machine Learning</li>
+        </ul>
+
+        <a
+          href=""  
+          aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
+          class="link link--icon"
+        > <!-- Include the certification links and  -->
+          <i aria-hidden="true" class="fab fa-github"></i>
+        </a>
+        <a
+          href="https://example.com"
+          aria-label="live preview"
+          class="link link--icon"
+        >
+          <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+        </a>
+      </div>
     </div>
   </section>
 
@@ -177,15 +203,13 @@
         <h2 class="section__title">Skills</h2>
         <ul class="skills__list">
           <li class="skills__list-item btn btn--plain">Python</li>                        <!--You can fill in the elective course and you can remove extras-->
-          <li class="skills__list-item btn btn--plain">CSS</li>
-          <li class="skills__list-item btn btn--plain">JavaScript</li>
-          <li class="skills__list-item btn btn--plain">React</li>
-          <li class="skills__list-item btn btn--plain">Python</li>
+            <li class="skills__list-item btn btn--plain">SQL</li>
+          <li class="skills__list-item btn btn--plain">R</li>
+          <li class="skills__list-item btn btn--plain">Machine Leanring</li>
+          <li class="skills__list-item btn btn--plain">Computer Vision</li>      
           <li class="skills__list-item btn btn--plain">Machine Learning</li>
-          <li class="skills__list-item btn btn--plain">Computer Vision</li>
-          <li class="skills__list-item btn btn--plain">Git</li>
-          <li class="skills__list-item btn btn--plain">A/B Testing</li>
-          <li class="skills__list-item btn btn--plain">Adobe Creative Suit</li>
+          <li class="skills__list-item btn btn--plain">Power BI</li>
+          <li class="skills__list-item btn btn--plain">Basic Document Formatting</li>
         </ul>
       </section>
 
