--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
         </ul>
 
         <a
-          href=""  
+          href="https://github.com/KapishRastogi/Short_Story_Generator"  
           aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
           class="link link--icon"
         > <!-- Include the certification links and  -->
           <i aria-hidden="true" class="fab fa-github"></i>
         </a>
         <a
-          href="https://example.com"
+          href="https://drive.google.com/file/d/1OuhuEbxgTHEH2c1AENtAGNn-Jkqf23Zk/view?usp=sharing"
           aria-label="live preview"
           class="link link--icon"
         >
@@ -173,19 +173,19 @@
         </p>
         <ul class="project__stack">
           <li class="project__stack-item">Python</li>
-          <li class="project__stack-item">Gen-Ai</li>
+          <li class="project__stack-item">Sklearn</li>
           <li class="project__stack-item">Machine Learning</li>
         </ul>
 
         <a
-          href=""  
+          href="https://github.com/KapishRastogi/Profit_Prediction"  
           aria-label="https://www.novypro.com/project/us-sales-dash" target="_blank"
           class="link link--icon"
         > <!-- Include the certification links and  -->
           <i aria-hidden="true" class="fab fa-github"></i>
         </a>
         <a
-          href="https://example.com"
+          href="https://drive.google.com/file/d/13Cejvs_CEiUeozJx0zh_5ffaOuZZzi6q/view?usp=sharing"
           aria-label="live preview"
           class="link link--icon"
         >
