--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body class="light" id="top">
     <header class="header center">
       <h3>
-        <a href="" class="link"  
+        <a href="https://www.linkedin.com/in/kapish-rastogi-a001b91b2/" class="link"  
           >{KR}. <!--insert your initials here --></a
         >
       </h3> <!--use the linkedIn or any link in above href-->
@@ -110,7 +110,7 @@
           <div class="project">
             <h3>Brain Tumor Classification</h3> <!--Peoject Title -->
             <p class="project__description">
-              Brain Tumor Classification on MRI Scan Images Using CNN Architectures
+              Constructed three deep learning models to assess their efficacy in classifying brain tumors: specifically, utilizing state-of-the-art architectures VGG16 and ResNet50, alongside a benchmark CNN model.
             </p> <!--Project description-->
             <ul class="project__stack">
               <li class="project__stack-item">Python</li>
@@ -127,7 +127,7 @@
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
             <a
-              href="https://example.com"
+              href="https://drive.google.com/file/d/1OuhuEbxgTHEH2c1AENtAGNn-Jkqf23Zk/view?usp=sharing"
               aria-label="live preview"
               class="link link--icon"
             > <!--Project demo or git link-->
