--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>Hi, I am <span class="about__name">Kapish Rastogi.</span></h1>
         <h2 class="about__role">Aspiring DataScientist</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
-          I am an ambitious Data Science enthusiast based in Bangalore, currently pursuing my Master's in Data Science at Christ University. With a passion for extracting meaningful insights from data, I am eager to explore the world of analytics and predictive modeling. Combining my analytical skills with programming expertise, I aspire to contribute to cutting-edge solutions that address real-world problems.
+          I'm a passionate Data Science enthusiast in Bangalore, pursuing a Master's in Data Science at Christ University. With a keen interest in deriving valuable insights from data, I'm excited to explore analytics and predictive modeling. By merging analytical skills with programming expertise, I aim to contribute to innovative solutions for real-world challenges.
         </p> <!-- about you -->
         <br>
         <a href="mailto:kapishrastogiofficial@gmail.com">Mail: kapishrastogiofficial@gmail.com </a><p> Contact: +91 79057 80974</p>  <!--Change it to your mail id and contact no-->
