Update index.html adding info

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h1>Hi, I am <span class="about__name">Kapish Rastogi.</span></h1>
         <h2 class="about__role">Aspiring DataScientist</h2>
         <p class="about__desc"> <!-- Edit the About make sure you add your degree!-->
-          I'm a passionate Data Science enthusiast in Bangalore, pursuing a Master's in Data Science at Christ University. With a keen interest in deriving valuable insights from data, I'm excited to explore analytics and predictive modeling. By merging analytical skills with programming expertise, I aim to contribute to innovative solutions for real-world challenges.
+          I'm a passionate Data Science enthusiast with a keen interest in deriving valuable insights from data. Excited to explore analytics and predictive modeling, I merge analytical skills with programming expertise to contribute to innovative solutions for real-world challenges. Seeking a challenging role to apply expertise in machine learning, statistics, natural language processing, and data visualization, aiming to solve complex business issues and improve strategic decision-making.
         </p> <!-- about you -->
         <br>
         <a href="mailto:kapishrastogiofficial@gmail.com">Mail: kapishrastogiofficial@gmail.com </a><p> Contact: +91 79057 80974</p>  <!--Change it to your mail id and contact no-->
