added project telecom

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       
 
         <div class="about__contact center">
-          <a href="https://drive.google.com/file/d/1y0oL2U6pwx5EDE6OUdiAlfUvvX-kfABD/view?usp=sharing" target="_blank"  > <!-- drive link for resume-->
+          <a href="https://drive.google.com/file/d/1Tq02ujTTsy-jWgcqaDpdak8l0SZmp0Ld/view?usp=sharing" target="_blank"  > <!-- drive link for resume-->
             <span class="btn btn--outline">Resume</span> 
           </a>
 
@@ -126,14 +126,32 @@
 
               <i aria-hidden="true" class="fab fa-github"></i>
             </a>
-            <a
-              href="https://drive.google.com/file/d/1OuhuEbxgTHEH2c1AENtAGNn-Jkqf23Zk/view?usp=sharing"
-              aria-label="live preview"
-              class="link link--icon"
+            <!-- <a -->
+              <!-- href="https://drive.google.com/file/d/1OuhuEbxgTHEH2c1AENtAGNn-Jkqf23Zk/view?usp=sharing" -->
+              <!-- aria-label="live preview" -->
+              <!-- class="link link--icon" -->
             > <!--Project demo or git link-->
-              <i aria-hidden="true" class="fas fa-external-link-alt"></i>
-            </a>
+              <!-- <i aria-hidden="true" class="fas fa-external-link-alt"></i> -->
+            <!-- </a> -->
           </div>
+          <div class="project">
+            <h3>Telecom Customer Churn Prediction</h3> <!-- Project Title -->
+            <p class="project__description">
+                Performed EDA using numpy, pandas, matplotlib, and seaborn on a dataset focusing on Customer Churn, implemented SMOTE for balancing, and achieved 95% accuracy with Logistic Regression for preemptive customer retention.
+            </p> <!-- Project description -->
+            <ul class="project__stack">
+                <li class="project__stack-item">Pandas</li>
+                <li class="project__stack-item">Matplotlib</li>
+                <li class="project__stack-item">Scikit-Learn</li>
+            </ul>
+
+            <a href="https://github.com/KapishRastogi/Telecom-Customer-Churn-Prediction" target="_blank" aria-label="source code" class="link link--icon">
+                <i aria-hidden="true" class="fab fa-github"></i>
+            </a>
+            <!-- <a href="https://example.com/telecom-customer-churn-prediction-demo" aria-label="live demo" class="link link--icon">
+                <i aria-hidden="true" class="fas fa-external-link-alt"></i>
+            </a> -->
+        </div>
         </div>
       </section>
 
