--- a/index.html
+++ b/index.html
@@ -218,16 +218,26 @@
       
       <!-- Skills -->
       <section class="section skills" id="skills">
-        <h2 class="section__title">Skills</h2>
+        <h2 class="section__title">Technical Skills</h2>
         <ul class="skills__list">
           <li class="skills__list-item btn btn--plain">Python</li>                        <!--You can fill in the elective course and you can remove extras-->
             <li class="skills__list-item btn btn--plain">SQL</li>
-          <li class="skills__list-item btn btn--plain">R</li>
-          <li class="skills__list-item btn btn--plain">Machine Leanring</li>
-          <li class="skills__list-item btn btn--plain">Computer Vision</li>      
+            <li class="skills__list-item btn btn--plain">Natural Language Processing (NLP)</li>
           <li class="skills__list-item btn btn--plain">Machine Learning</li>
-          <li class="skills__list-item btn btn--plain">Power BI</li>
-          <li class="skills__list-item btn btn--plain">Basic Document Formatting</li>
+          <li class="skills__list-item btn btn--plain">Deep Learning</li>
+          <li class="skills__list-item btn btn--plain">Large Language Models (LLM)</li> 
+          <li class="skills__list-item btn btn--plain">R</li>
+          <li class="skills__list-item btn btn--plain">Java</li>     
+          <li class="skills__list-item btn btn--plain">Computer Vision</li>
+          <li class="skills__list-item btn btn--plain">Git</li>
+        </ul>
+        <h2 class="section__title">Technical Tools</h2>
+        <ul class="skills__list">
+          <li class="skills__list-item btn btn--plain">Power BI</li>                        <!--You can fill in the elective course and you can remove extras-->
+            <li class="skills__list-item btn btn--plain">Tableau</li>
+            <li class="skills__list-item btn btn--plain">MS SQL Server</li>
+          <li class="skills__list-item btn btn--plain">MS Excel</li>
+          <li class="skills__list-item btn btn--plain">Github</li>
         </ul>
       </section>
 
